Added UI sliders for specifying preferences

--- a/public/style.css
+++ b/public/style.css
@@ -9,3 +9,13 @@
 #errorText {
     color: red;
 }
+
+.slider {
+    cursor: pointer;
+    opacity: 0.8;
+    transition: opacity 0.5s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
